# Problem-Solver

./: AbstractSearchable.h  AbstractSearcher.h  Astar.h  BFS.h  BestFS.cpp  BestFS.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MatrixBuilder.cpp  MatrixBuilder.h  MatrixSolver.cpp  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  PriorityQueue.h  PriorityQueueHeuristic.h  README.md  Searchable.h  Searcher.h  Server.h  Solution.h  Solver.cpp  Solver.h  State.cpp  State.h  StringReverser.cpp  StringReverser.h  Tasks.txt  (+2 more)
